# TFG-ProduccionElectrica

./: .gitignore  README.md  bibliografia y referencias.md  config_nvim.7z  main.tex  pyproject.toml  referencias.bib
codigo/: data_description.ipynb
codigo/Julia/: Manifest.toml  Project.toml  exploratory_data_analisis.ipynb  preprocesamiento.ipynb  preprocesing.ipynb
codigo/notebooks/: WF_EDA.ipynb  data_description.ipynb  data_exploration.ipynb  first_EDA.ipynb  preprocesamiento.ipynb  preprocessing.ipynb  prueba.ipynb
codigo/notebooks/Old/: data_description.ipynb  data_exploration.ipynb  preprocesamiento.ipynb  preprocessing.ipynb
documento/: main.tex
documento/referencias/: bibliografia y referencias.md
